@@ -181,8 +181,14 @@ fix_ai_army_composition = true
 
 ; "Pop units" are special units whose only purpose is to be joined into cities to increase their population. Normally the AI does not know what to do
 ; with these units, so this option enables a routine that causes them to search for & join an appropriate city. Pop units only appear in some mods
-; (for example Tides of Crimson). Under the standard game rules, this option has no effect.
+; (for example Tides of Crimson). Under the standard game rules, this option has no effect. In order to function as a pop unit, a unit must use the
+; terraform AI strategy, have no worker actions except join city, have a pop cost of at least 1, and have zero attack, defense, & bombard strengths.
 enable_pop_unit_ai = true
+
+; "Caravan units" are special units whose only purpose is to be disbanded to contribute shields to a city. The name comes from the Civ 2 caravan.
+; Caravan units may appear in some mods; under the standard game rules, this option has no effect. In order to function as a caravan unit, a unit must
+; use the terraform AI strategy, have no worker actions enabled, have the ability to disband, and have zero attack, defense, & bombard strengths.
+enable_caravan_unit_ai = true
 
 ; In the base game, the AI will assign 1, 2, or 3 escort units to its naval transports and carriers depending in their shield cost and the number of
 ; units they're carrying. This option lets you reduce the upper limit on the number of escorts assigned. You can limit the number of escorts to 2, 1,
